--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+  <meta name="author" content="Roy Cuadra">
+  <meta name="description" content="Recipe Page">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
@@ -107,7 +110,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Zuzana83/recipe-page">z83studio</a>.
+    Coded by <a href="https://github.com/Zuzana83/recipe-page">Roy Cuadra</a>.
   </div>
 </main>
 </body>
